CREATE TABLE [dbo].[CoreUser]
(
	[Id] UNIQUEIDENTIFIER NOT NULL PRIMARY KEY,
    [Username] NCHAR (50) NULL, 
    [CreatedAt] DATETIME NOT NULL,
    [UpdatedAt] DATETIME NULL, 
    CONSTRAINT [FK_CoreUser_AuthUser] FOREIGN KEY ([Id]) REFERENCES [AuthUser]([Id]), 
)
